--- a/style2.css
+++ b/style2.css
@@ -79,11 +79,18 @@ body {
 #text1{
     position: absolute !important;
     border: 1px solid #000;
+
 }
 #text1::selection{
     background-color: transparent;
     border: none !important;
 }
-#text2{
-    margin: 50px 0;
+#text2::selection{
+    background-color: transparent;
+    border: none !important;
 }
+#text2{
+    margin-top: 50px;
+}
+
+
