--- a/style.css
+++ b/style.css
@@ -10,151 +10,98 @@ body {
     overflow-x: hidden;
 }
 
-.main_box{
-    border: 1px solid #d1d1d1;
+.main_box {
+    /* border: 1px solid #d1d1d1; */
     height: auto;
 }
-.main_box .grid_row{
+
+.main_box .grid_row {
     display: grid;
     grid-template-columns: 2fr 1fr;
     gap: 0;
 }
-.main_box .blank_space{
+
+.main_box .blank_space {
     border: .5px solid #f7f7f7;
     height: auto;
     padding: 100px 0;
     /* overflow: scroll; */
 }
-.main_box .selected_page{
+
+.main_box .selected_page {
     width: 100%;
     height: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
 }
-#page{
+
+#page {
     border: 1px solid #eee;
     position: relative;
     padding: 20px;
+    display: flex;
+    flex-direction: column;
+    gap: 50px;
 }
 
-#page #draggableOne{
-    position: absolute;
+#page #text1:hover,
+#page #text2:hover,
+#page img:hover{
+    cursor: pointer;
 }
-#page #draggableTwo{
-    margin-top: 30px;
-}
 
 
 
-.main_box .configure_section{
+.main_box .configure_section {
     padding: 100px 20px;
 }
 
-.main_box .configure_section .page_select{
-    margin-bottom: 30px !important;
-}
-
-.main_box .configure_section .width_height_flex_row{
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    gap: 30px;
-    margin-top: 10px;
-}
-
-.main_box .configure_section .width{
-    display: flex;
-    /* align-items: center; */
-    justify-content: center;
-    gap: 5px;
-}
-.main_box .configure_section .width_height_flex_row input{
-    height: 40px;
-}
-.main_box .configure_section .width_height_flex_row select{
-    height: 40px;
-    margin-top: 24px;
-}
-.main_box .configure_section .height{
-    display: flex;
-    /* align-items: center; */
-    justify-content: center;
-    gap: 5px;
-}
-button{
-    height: 40px;
-    padding: 5px 10px;
-    border: 1px solid #eee;
-    background: transparent;
-    border-radius: 5px !important;
-    overflow: hidden;
-}
-
-.main_box .configure_section .font_size{
-    display: flex;
-    align-items: center;
-    gap: 10px;
-    margin: 30px 0;
-}
-.main_box .configure_section .font_weight{
-    display: flex;
-    align-items: center;
-    gap: 10px;
-    margin: 30px 0;
-}
-
-
-.main_box .configure_section #fontColorPicker{
-    height: 20px;
-    width: 20px;
-    border: 1px solid #eee;
-    border-radius: 5px !important;
-    overflow: hidden;
-}
-
-
-.main_box .configure_section .font_color{
-    display: flex;
-    align-items: center;
-    gap: 5px;
-    margin-bottom: 30px;
-}
-
-#imageContainer #sizeAdjustmentButtons{
-    margin-top: 10px;
-    display: flex;
-    align-items: center;
-    gap: 30px;
-}
 
 
 
-#progressBarContainer {
-    width: 100%;
-    height: 20px;
-    background-color: #f0f0f0;
-    margin-bottom: 10px;
-}
-
-#progressBar {
-    height: 100%;
-    background-color: #4caf50;
-    width: 20%; /* Initial width */
-}
-
-
-
-
-img {
-    max-width: 100%;
-    height: auto;
-  }
-
-
-.qr_code_width_height{
+.qr_code_width_height ,
+.font_size,
+.margin,
+.font_weight,
+.font_color,
+.padding{
     display: flex;
     flex-direction: column;
+    margin-top: 30px;
 }
+
+#qrImage {
+    position: absolute !important;
+    /* margin: 100px 0; */
+    top: 0;
+    left: 0;
+}
+
+#text1{
+    position: absolute !important;
+    /* border: 1px solid #000; */
+    top: 100px;
+    left: 0;
+
+}
+#text2{
+    position: absolute !important;
+    /* border: 1px solid #000; */
+    top: 150px;
+    left: 0;
+
+}
+#text1::selection{
+    background-color: transparent;
+    border: none !important;
+}
+#text2::selection{
+    background-color: transparent;
+    border: none !important;
+}
+/* #text2{
+    margin-top: 50px;
+} */
 
 
