--- a/style-new.css
+++ b/style-new.css
@@ -1,5 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
 
+
+
 * {
     padding: 0;
     margin: 0;
@@ -18,7 +20,7 @@ html {
 }
 
 .drag_drop_ui .container {
-    height: 100vh;
+    height: auto;
     padding: 50px 0;
 }
 
@@ -104,8 +106,8 @@ html {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    /* text-align: center; */
-    padding: 20px;
+    text-align: center;
+    /* padding: 20px; */
     cursor: pointer;
     /* position: relative;
     align-items: center; */
@@ -118,7 +120,7 @@ html {
 .page-contents #eventname {
     font-size: 26px;
     font-weight: 700;
-    /* margin: 32px 0px 24px; */
+    margin: 32px 0px 24px;
     /* position: absolute;
     top: 50px; */
 
@@ -127,7 +129,7 @@ html {
 .page-contents #name {
     font-size: 22px;
     font-weight: 600;
-    /* margin: 24px 0px 16px; */
+    margin: 24px 0px 16px;
     /* position: absolute;
 
     top: 100px; */
@@ -151,7 +153,7 @@ html {
 .page-contents #qrImage {
     width: 200px;
     height: 200px;
-    /* margin: 50px auto; */
+    margin: 50px auto;
     /* position: absolute;
     top: 300px; */
 }
@@ -191,7 +193,7 @@ button {
 
 .accordion-body {
     background-color: #f7f7f7;
-    padding: 10px !important;
+    padding: 20px 10px !important;
 }
 
 
@@ -279,10 +281,10 @@ input[type=range]::-moz-range-thumb:active {
     display: flex;
     gap: 20px;
 }
-
+/* 
 .selected {
-    background-color: lightblue;
-}
+    background-color: #ffeaea;
+} */
 
 .font_size label,
 .font_weight label{
@@ -301,3 +303,46 @@ input[type=range]::-moz-range-thumb:active {
     align-items: center;
     gap: 10px;
 }
+
+
+.hide_buttons .item{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-bottom: 15px;
+}
+.hide_buttons .item button{
+    background-color: transparent;
+}
+
+/* .hide_buttons .item button:focus{
+    opacity: 0.5;
+} */
+
+.hide_buttons .item h6{
+    font-size: 14px;
+    margin-bottom: 0;
+    font-weight: 400;
+}
+
+.textcolor{
+    margin: 15px 0;
+    display: flex;
+    align-items: center !important;
+    gap: 10px;
+}
+.textcolor img{
+    display: none !important;
+}
+.textcolor input{
+    width: 20px;
+    height: 20px;
+}
+.textcolor label{
+    padding-bottom: 0;
+}
+.fontfamily{
+    display: flex;
+    flex-direction: column;
+}
+
